clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr22141_2.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/pr22141-2.c" (c, x86_64-unknown-linux-gnu)
global u : rec_S = Zero { ty: Named("rec_S") } [external, default, align 16, dso_local]

fn abort() -> void [external, c, nothrow];
fn memset(%arg0: void*, %arg1: s32i, %arg2: u64i) -> void* [external, c, nothrow];
fn c1(%arg4: rec_T*) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg4: rec_T*):
        %146 = alloca rec_T*, "p", align 8
        store %arg4, %146
        scope {
                %152 = load %146 : rec_T*, align 8
                get_member
                %154 = load %153 : s8i, align 1
                %155 = cast(integral) %154 : s32i
                %156 = const 1 : s32i
                cmp
                %158 = ternary %157 ? { : bool
                        %182 = const true : bool
                        yield %182
                } : {
                        %176 = load %146 : rec_T*, align 8
                        get_member
                        %178 = load %177 : s8i, align 1
                        %179 = cast(integral) %178 : s32i
                        %180 = const 2 : s32i
                        cmp
                        yield %181
                }
                %159 = ternary %158 ? { : bool
                        %175 = const true : bool
                        yield %175
                } : {
                        %169 = load %146 : rec_T*, align 8
                        get_member
                        %171 = load %170 : s8i, align 1
                        %172 = cast(integral) %171 : s32i
                        %173 = const 3 : s32i
                        cmp
                        yield %174
                }
                %160 = ternary %159 ? { : bool
                        %168 = const true : bool
                        yield %168
                } : {
                        %162 = load %146 : rec_T*, align 8
                        get_member
                        %164 = load %163 : s8i, align 1
                        %165 = cast(integral) %164 : s32i
                        %166 = const 4 : s32i
                        cmp
                        yield %167
                }
                if %160 {
                        %161 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %147 = load %146 : rec_T*, align 8
        %148 = cast(bitcast) %147 : void*
        %149 = const 170 : s32i
        %150 = const 4 : u64i
        %151 = call @memset(%148, %149, %150) : void* [all]
        return
}
fn c2(%arg3: rec_S*) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg3: rec_S*):
        %143 = alloca rec_S*, "p", align 8
        store %arg3, %143
        %144 = load %143 : rec_S*, align 8
        get_member
        call @c1(%145) [all]
        return
}
fn c3(%arg2: rec_U*) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg2: rec_U*):
        %138 = alloca rec_U*, "p", align 8
        store %arg2, %138
        %139 = const 2 : s64i
        %140 = load %138 : rec_U*, align 8
        get_member
        get_element
        call @c2(%142) [all]
        return
}
fn f1() -> void [external, c, no_inline, dso_local, nothrow] {
        %127 = alloca rec_S, ".compoundliteral", align 1
        %128 = get_global @u : rec_S*
        get_member
        get_member
        %131 = const 1 : s8i
        store %131, %130, align 1
        get_member
        %133 = const 2 : s8i
        store %133, %132, align 1
        get_member
        %135 = const 3 : s8i
        store %135, %134, align 1
        get_member
        %137 = const 4 : s8i
        store %137, %136, align 1
        copy
        return
}
fn f2() -> void [external, c, no_inline, dso_local, nothrow] {
        %111 = const 1 : s8i
        %112 = get_global @u : rec_S*
        get_member
        get_member
        store %111, %114, align 16
        %115 = const 2 : s8i
        %116 = get_global @u : rec_S*
        get_member
        get_member
        store %115, %118, align 1
        %119 = const 3 : s8i
        %120 = get_global @u : rec_S*
        get_member
        get_member
        store %119, %122, align 2
        %123 = const 4 : s8i
        %124 = get_global @u : rec_S*
        get_member
        get_member
        store %123, %126, align 1
        return
}
fn f3() -> void [external, c, no_inline, dso_local, nothrow] {
        %95 = const 4 : s8i
        %96 = get_global @u : rec_S*
        get_member
        get_member
        store %95, %98, align 1
        %99 = const 2 : s8i
        %100 = get_global @u : rec_S*
        get_member
        get_member
        store %99, %102, align 1
        %103 = const 1 : s8i
        %104 = get_global @u : rec_S*
        get_member
        get_member
        store %103, %106, align 16
        %107 = const 3 : s8i
        %108 = get_global @u : rec_S*
        get_member
        get_member
        store %107, %110, align 2
        return
}
fn f4() -> void [external, c, no_inline, dso_local, nothrow] {
        %82 = alloca rec_S, "v", align 16
        %83 = const 1 : s8i
        get_member
        get_member
        store %83, %85, align 16
        %86 = const 2 : s8i
        get_member
        get_member
        store %86, %88, align 1
        %89 = const 3 : s8i
        get_member
        get_member
        store %89, %91, align 2
        %92 = const 4 : s8i
        get_member
        get_member
        store %92, %94, align 1
        call @c2(%82) [all]
        return
}
fn f5(%arg1: rec_S*) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg1: rec_S*):
        %65 = alloca rec_S*, "p", align 8
        store %arg1, %65
        %66 = const 1 : s8i
        %67 = load %65 : rec_S*, align 8
        get_member
        get_member
        store %66, %69, align 1
        %70 = const 3 : s8i
        %71 = load %65 : rec_S*, align 8
        get_member
        get_member
        store %70, %73, align 1
        %74 = const 4 : s8i
        %75 = load %65 : rec_S*, align 8
        get_member
        get_member
        store %74, %77, align 1
        %78 = const 2 : s8i
        %79 = load %65 : rec_S*, align 8
        get_member
        get_member
        store %78, %81, align 1
        return
}
fn f6() -> void [external, c, no_inline, dso_local, nothrow] {
        %40 = alloca rec_U, "v", align 16
        %41 = const 1 : s8i
        %42 = const 2 : s64i
        get_member
        get_element
        get_member
        get_member
        store %41, %46, align 8
        %47 = const 2 : s8i
        %48 = const 2 : s64i
        get_member
        get_element
        get_member
        get_member
        store %47, %52, align 1
        %53 = const 3 : s8i
        %54 = const 2 : s64i
        get_member
        get_element
        get_member
        get_member
        store %53, %58, align 2
        %59 = const 4 : s8i
        %60 = const 2 : s64i
        get_member
        get_element
        get_member
        get_member
        store %59, %64, align 1
        call @c3(%40) [all]
        return
}
fn f7(%arg0: rec_U*) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: rec_U*):
        %11 = alloca rec_U*, "p", align 8
        store %arg0, %11
        %12 = const 1 : s8i
        %13 = const 2 : s64i
        %14 = load %11 : rec_U*, align 8
        get_member
        get_element
        get_member
        get_member
        store %12, %18, align 1
        %19 = const 3 : s8i
        %20 = const 2 : s64i
        %21 = load %11 : rec_U*, align 8
        get_member
        get_element
        get_member
        get_member
        store %19, %25, align 1
        %26 = const 4 : s8i
        %27 = const 2 : s64i
        %28 = load %11 : rec_U*, align 8
        get_member
        get_element
        get_member
        get_member
        store %26, %32, align 1
        %33 = const 2 : s8i
        %34 = const 2 : s64i
        %35 = load %11 : rec_U*, align 8
        get_member
        get_element
        get_member
        get_member
        store %33, %39, align 1
        return
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca rec_U, "w", align 16
        %2 = const 0 : s32i
        store %2, %0
        call @f1() [all]
        %3 = get_global @u : rec_S*
        call @c2(%3) [all]
        call @f2() [all]
        %4 = get_global @u : rec_S*
        get_member
        call @c1(%5) [all]
        call @f3() [all]
        %6 = get_global @u : rec_S*
        call @c2(%6) [all]
        call @f4() [all]
        %7 = get_global @u : rec_S*
        call @f5(%7) [all]
        %8 = get_global @u : rec_S*
        call @c2(%8) [all]
        call @f6() [all]
        call @f7(%1) [all]
        call @c3(%1) [all]
        %9 = const 0 : s32i
        store %9, %0
        %10 = load %0 : s32i
        return %10
}
