clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr23047.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/pr23047.c" (c, x86_64-unknown-linux-gnu)
fn abort() -> void [external, c, nothrow];
fn f(%arg2: s32i) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg2: s32i):
        %10 = alloca s32i, "i", align 4
        store %arg2, %10
        %11 = load %10 : s32i, align 4
        %12 = const 0 : s32i
        %13 = cmp gt %11, %12 : bool
        %14 = ternary %13 ? { : s32i
            %21 = load %10 : s32i, align 4
            yield %21
        } : {
            %19 = load %10 : s32i, align 4
            %20 = minus %19 : s32i [nsw]
            yield %20
        }
        store %14, %10, align 4
        scope {
            %16 = load %10 : s32i, align 4
            %17 = const 0 : s32i
            %18 = cmp lt %16, %17 : bool
            if %18 {
                return
            }
            yield
        }
        %15 = get_global @abort : (() -> void)*
        call @abort() [all]
        return
}
fn exit(%arg0: s32i) -> void [external, c];
fn main(%arg0: s32i, %arg1: s8i**) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i, %arg1: s8i**):
        %0 = alloca s32i, "argc", align 4
        %1 = alloca s8i**, "argv", align 8
        %2 = alloca s32i, "__retval", align 4
        store %arg0, %0
        store %arg1, %1
        %3 = const 0 : s32i
        store %3, %2
        %4 = const -2147483647 : s32i
        %5 = const 1 : s32i
        %6 = sub %4, %5 : s32i [nsw]
        call @f(%6) [all]
        %7 = get_global @exit : ((s32i) -> void)*
        %8 = const 0 : s32i
        call @exit(%8) [all]
        %9 = load %2 : s32i
        return %9
}
