clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr23135.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/pr23135.c" (c, x86_64-unknown-linux-gnu)
global i : vector<2 x s32i> = ConstVector { ty: Vector { element_type: Named("s32i"), size: 2, is_scalable: None }, elts: Array([CirInt { ty: Named("s32i"), value: "150" }, CirInt { ty: Named("s32i"), value: "100" }]) } [external, default, align 8, dso_local]
global j : vector<2 x s32i> = ConstVector { ty: Vector { element_type: Named("s32i"), size: 2, is_scalable: None }, elts: Array([CirInt { ty: Named("s32i"), value: "10" }, CirInt { ty: Named("s32i"), value: "13" }]) } [external, default, align 8, dso_local]
global res : rec_anon2E0 = Zero { ty: Named("rec_anon2E0") } [external, default, align 8, dso_local]
global k : vector<2 x s32i> = Zero { ty: Vector { element_type: Named("s32i"), size: 2, is_scalable: None } } [external, default, align 8, dso_local]

fn abort() -> void [external, c, nothrow];
fn verify(%arg0: s32i, %arg1: s32i, %arg2: s32i, %arg3: s32i, %arg4: rec_big_t*) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i, %arg1: s32i, %arg2: s32i, %arg3: s32i, %arg4: rec_big_t*):
        %284 = load %arg4 : rec_big_t
        %285 = alloca s32i, "a1", align 4
        %286 = alloca s32i, "a2", align 4
        %287 = alloca s32i, "b1", align 4
        %288 = alloca s32i, "b2", align 4
        %289 = alloca rec_big_t, "big", align 1
        store %arg0, %285
        store %arg1, %286
        store %arg2, %287
        store %arg3, %288
        store %284, %289
        scope {
                %290 = load %285 : s32i, align 4
                %291 = load %287 : s32i, align 4
                cmp
                %293 = ternary %292 ? { : bool
                        %298 = const true : bool
                        yield %298
                } : {
                        %295 = load %286 : s32i, align 4
                        %296 = load %288 : s32i, align 4
                        cmp
                        yield %297
                }
                if %293 {
                        %294 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        return
}
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca rec_big_t, "big", align 1
        %2 = alloca vector<2 x s32i>, "k0", align 8
        %3 = alloca vector<2 x s32i>, "k1", align 8
        %4 = alloca vector<2 x s32i>, "k2", align 8
        %5 = alloca vector<2 x s32i>, "k3", align 8
        %6 = alloca vector<2 x s32i>, "k4", align 8
        %7 = alloca vector<2 x s32i>, "k5", align 8
        %8 = alloca vector<2 x s32i>, "k6", align 8
        %9 = alloca vector<2 x s32i>, "k7", align 8
        %10 = const 0 : s32i
        store %10, %0
        %11 = get_global @i : vector<2 x s32i>*
        %12 = load %11 : vector<2 x s32i>, align 8
        %13 = get_global @j : vector<2 x s32i>*
        %14 = load %13 : vector<2 x s32i>, align 8
        %15 = add %12, %14 : vector<2 x s32i>
        store %15, %2, align 8
        %16 = load %2 : vector<2 x s32i>, align 8
        %17 = get_global @res : rec_anon2E0*
        get_member
        store %16, %18, align 8
        %19 = const 0 : s64i
        %20 = get_global @res : rec_anon2E0*
        get_member
        get_element
        %23 = load %22 : s32i, align 8
        %24 = const 1 : s64i
        %25 = get_global @res : rec_anon2E0*
        get_member
        get_element
        %28 = load %27 : s32i, align 4
        %29 = const 160 : s32i
        %30 = const 113 : s32i
        %31 = load %1 : rec_big_t, align 1
        %32 = alloca rec_big_t, "byval", align 8
        store %31, %32
        call @verify(%23, %28, %29, %30, %32) [all]
        %33 = get_global @i : vector<2 x s32i>*
        %34 = load %33 : vector<2 x s32i>, align 8
        %35 = get_global @j : vector<2 x s32i>*
        %36 = load %35 : vector<2 x s32i>, align 8
        mul
        store %37, %3, align 8
        %38 = load %3 : vector<2 x s32i>, align 8
        %39 = get_global @res : rec_anon2E0*
        get_member
        store %38, %40, align 8
        %41 = const 0 : s64i
        %42 = get_global @res : rec_anon2E0*
        get_member
        get_element
        %45 = load %44 : s32i, align 8
        %46 = const 1 : s64i
        %47 = get_global @res : rec_anon2E0*
        get_member
        get_element
        %50 = load %49 : s32i, align 4
        %51 = const 1500 : s32i
        %52 = const 1300 : s32i
        %53 = load %1 : rec_big_t, align 1
        %54 = alloca rec_big_t, "byval", align 8
        store %53, %54
        call @verify(%45, %50, %51, %52, %54) [all]
        %55 = get_global @i : vector<2 x s32i>*
        %56 = load %55 : vector<2 x s32i>, align 8
        %57 = get_global @j : vector<2 x s32i>*
        %58 = load %57 : vector<2 x s32i>, align 8
        div
        store %59, %4, align 8
        %60 = load %4 : vector<2 x s32i>, align 8
        %61 = get_global @res : rec_anon2E0*
        get_member
        store %60, %62, align 8
        %63 = const 0 : s64i
        %64 = get_global @res : rec_anon2E0*
        get_member
        get_element
        %67 = load %66 : s32i, align 8
        %68 = const 1 : s64i
        %69 = get_global @res : rec_anon2E0*
        get_member
        get_element
        %72 = load %71 : s32i, align 4
        %73 = const 15 : s32i
        %74 = const 7 : s32i
        %75 = load %1 : rec_big_t, align 1
        %76 = alloca rec_big_t, "byval", align 8
        store %75, %76
        call @verify(%67, %72, %73, %74, %76) [all]
        %77 = get_global @i : vector<2 x s32i>*
        %78 = load %77 : vector<2 x s32i>, align 8
        %79 = get_global @j : vector<2 x s32i>*
        %80 = load %79 : vector<2 x s32i>, align 8
        and
        store %81, %5, align 8
        %82 = load %5 : vector<2 x s32i>, align 8
        %83 = get_global @res : rec_anon2E0*
        get_member
        store %82, %84, align 8
        %85 = const 0 : s64i
        %86 = get_global @res : rec_anon2E0*
        get_member
        get_element
        %89 = load %88 : s32i, align 8
        %90 = const 1 : s64i
        %91 = get_global @res : rec_anon2E0*
        get_member
        get_element
        %94 = load %93 : s32i, align 4
        %95 = const 2 : s32i
        %96 = const 4 : s32i
        %97 = load %1 : rec_big_t, align 1
        %98 = alloca rec_big_t, "byval", align 8
        store %97, %98
        call @verify(%89, %94, %95, %96, %98) [all]
        %99 = get_global @i : vector<2 x s32i>*
        %100 = load %99 : vector<2 x s32i>, align 8
        %101 = get_global @j : vector<2 x s32i>*
        %102 = load %101 : vector<2 x s32i>, align 8
        or
        store %103, %6, align 8
        %104 = load %6 : vector<2 x s32i>, align 8
        %105 = get_global @res : rec_anon2E0*
        get_member
        store %104, %106, align 8
        %107 = const 0 : s64i
        %108 = get_global @res : rec_anon2E0*
        get_member
        get_element
        %111 = load %110 : s32i, align 8
        %112 = const 1 : s64i
        %113 = get_global @res : rec_anon2E0*
        get_member
        get_element
        %116 = load %115 : s32i, align 4
        %117 = const 158 : s32i
        %118 = const 109 : s32i
        %119 = load %1 : rec_big_t, align 1
        %120 = alloca rec_big_t, "byval", align 8
        store %119, %120
        call @verify(%111, %116, %117, %118, %120) [all]
        %121 = get_global @i : vector<2 x s32i>*
        %122 = load %121 : vector<2 x s32i>, align 8
        %123 = get_global @j : vector<2 x s32i>*
        %124 = load %123 : vector<2 x s32i>, align 8
        xor
        store %125, %7, align 8
        %126 = load %7 : vector<2 x s32i>, align 8
        %127 = get_global @res : rec_anon2E0*
        get_member
        store %126, %128, align 8
        %129 = const 0 : s64i
        %130 = get_global @res : rec_anon2E0*
        get_member
        get_element
        %133 = load %132 : s32i, align 8
        %134 = const 1 : s64i
        %135 = get_global @res : rec_anon2E0*
        get_member
        get_element
        %138 = load %137 : s32i, align 4
        %139 = const 156 : s32i
        %140 = const 105 : s32i
        %141 = load %1 : rec_big_t, align 1
        %142 = alloca rec_big_t, "byval", align 8
        store %141, %142
        call @verify(%133, %138, %139, %140, %142) [all]
        %143 = get_global @i : vector<2 x s32i>*
        %144 = load %143 : vector<2 x s32i>, align 8
        minus
        store %145, %8, align 8
        %146 = load %8 : vector<2 x s32i>, align 8
        %147 = get_global @res : rec_anon2E0*
        get_member
        store %146, %148, align 8
        %149 = const 0 : s64i
        %150 = get_global @res : rec_anon2E0*
        get_member
        get_element
        %153 = load %152 : s32i, align 8
        %154 = const 1 : s64i
        %155 = get_global @res : rec_anon2E0*
        get_member
        get_element
        %158 = load %157 : s32i, align 4
        %159 = const -150 : s32i
        %160 = const -100 : s32i
        %161 = load %1 : rec_big_t, align 1
        %162 = alloca rec_big_t, "byval", align 8
        store %161, %162
        call @verify(%153, %158, %159, %160, %162) [all]
        %163 = get_global @i : vector<2 x s32i>*
        %164 = load %163 : vector<2 x s32i>, align 8
        not
        store %165, %9, align 8
        %166 = load %9 : vector<2 x s32i>, align 8
        %167 = get_global @res : rec_anon2E0*
        get_member
        store %166, %168, align 8
        %169 = const 0 : s64i
        %170 = get_global @res : rec_anon2E0*
        get_member
        get_element
        %173 = load %172 : s32i, align 8
        %174 = const 1 : s64i
        %175 = get_global @res : rec_anon2E0*
        get_member
        get_element
        %178 = load %177 : s32i, align 4
        %179 = const -151 : s32i
        %180 = const -101 : s32i
        %181 = load %1 : rec_big_t, align 1
        %182 = alloca rec_big_t, "byval", align 8
        store %181, %182
        call @verify(%173, %178, %179, %180, %182) [all]
        %183 = load %2 : vector<2 x s32i>, align 8
        %184 = load %3 : vector<2 x s32i>, align 8
        %185 = add %183, %184 : vector<2 x s32i>
        %186 = load %5 : vector<2 x s32i>, align 8
        %187 = add %185, %186 : vector<2 x s32i>
        %188 = load %6 : vector<2 x s32i>, align 8
        %189 = add %187, %188 : vector<2 x s32i>
        %190 = load %7 : vector<2 x s32i>, align 8
        %191 = add %189, %190 : vector<2 x s32i>
        %192 = load %8 : vector<2 x s32i>, align 8
        %193 = add %191, %192 : vector<2 x s32i>
        %194 = load %9 : vector<2 x s32i>, align 8
        %195 = add %193, %194 : vector<2 x s32i>
        %196 = get_global @k : vector<2 x s32i>*
        store %195, %196, align 8
        %197 = get_global @k : vector<2 x s32i>*
        %198 = load %197 : vector<2 x s32i>, align 8
        %199 = get_global @res : rec_anon2E0*
        get_member
        store %198, %200, align 8
        %201 = const 0 : s64i
        %202 = get_global @res : rec_anon2E0*
        get_member
        get_element
        %205 = load %204 : s32i, align 8
        %206 = const 1 : s64i
        %207 = get_global @res : rec_anon2E0*
        get_member
        get_element
        %210 = load %209 : s32i, align 4
        %211 = const 1675 : s32i
        %212 = const 1430 : s32i
        %213 = load %1 : rec_big_t, align 1
        %214 = alloca rec_big_t, "byval", align 8
        store %213, %214
        call @verify(%205, %210, %211, %212, %214) [all]
        %215 = load %2 : vector<2 x s32i>, align 8
        %216 = load %3 : vector<2 x s32i>, align 8
        mul
        %218 = load %5 : vector<2 x s32i>, align 8
        mul
        %220 = load %6 : vector<2 x s32i>, align 8
        mul
        %222 = load %7 : vector<2 x s32i>, align 8
        mul
        %224 = load %8 : vector<2 x s32i>, align 8
        mul
        %226 = load %9 : vector<2 x s32i>, align 8
        mul
        %228 = get_global @k : vector<2 x s32i>*
        store %227, %228, align 8
        %229 = get_global @k : vector<2 x s32i>*
        %230 = load %229 : vector<2 x s32i>, align 8
        %231 = get_global @res : rec_anon2E0*
        get_member
        store %230, %232, align 8
        %233 = const 0 : s64i
        %234 = get_global @res : rec_anon2E0*
        get_member
        get_element
        %237 = load %236 : s32i, align 8
        %238 = const 1 : s64i
        %239 = get_global @res : rec_anon2E0*
        get_member
        get_element
        %242 = load %241 : s32i, align 4
        %243 = const 1456467968 : s32i
        %244 = const -1579586240 : s32i
        %245 = load %1 : rec_big_t, align 1
        %246 = alloca rec_big_t, "byval", align 8
        store %245, %246
        call @verify(%237, %242, %243, %244, %246) [all]
        %247 = load %2 : vector<2 x s32i>, align 8
        %248 = load %3 : vector<2 x s32i>, align 8
        div
        %250 = load %4 : vector<2 x s32i>, align 8
        div
        %252 = load %5 : vector<2 x s32i>, align 8
        div
        %254 = load %6 : vector<2 x s32i>, align 8
        div
        %256 = load %7 : vector<2 x s32i>, align 8
        div
        %258 = load %8 : vector<2 x s32i>, align 8
        div
        %260 = load %9 : vector<2 x s32i>, align 8
        div
        %262 = get_global @k : vector<2 x s32i>*
        store %261, %262, align 8
        %263 = get_global @k : vector<2 x s32i>*
        %264 = load %263 : vector<2 x s32i>, align 8
        %265 = get_global @res : rec_anon2E0*
        get_member
        store %264, %266, align 8
        %267 = const 0 : s64i
        %268 = get_global @res : rec_anon2E0*
        get_member
        get_element
        %271 = load %270 : s32i, align 8
        %272 = const 1 : s64i
        %273 = get_global @res : rec_anon2E0*
        get_member
        get_element
        %276 = load %275 : s32i, align 4
        %277 = const 0 : s32i
        %278 = const 0 : s32i
        %279 = load %1 : rec_big_t, align 1
        %280 = alloca rec_big_t, "byval", align 8
        store %279, %280
        call @verify(%271, %276, %277, %278, %280) [all]
        %281 = get_global @exit : (s32i) -> void*
        %282 = const 0 : s32i
        call @exit(%282) [all]
        %283 = load %0 : s32i
        return %283
}
