clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr23941.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/pr23941.c" (c, x86_64-unknown-linux-gnu)
global d : double = CirFloat { ty: Double, value: "5.8774717541114375E-39" } [external, default, align 8, dso_local]

fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca double, "x", align 8
        %2 = const 0 : s32i
        store %2, %0
        %3 = const 1.17549435E-38 : float
        %4 = cast(floating) %3 : double
        %5 = const 2.000000e+00 : double
        fdiv
        store %6, %1, align 8
        scope {
                %9 = load %1 : double, align 8
                %10 = get_global @d : double*
                %11 = load %10 : double, align 8
                cmp
                if %12 {
                        %13 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %7 = const 0 : s32i
        store %7, %0
        %8 = load %0 : s32i
        return %8
}
